--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-administrator.sublime-workspace
-*.sublime-project
+# workspace files are user-specific
 *.sublime-workspace
+
+# project files should be checked into the repository, unless a significant
+# proportion of contributors will probably not be using SublimeText
+*.sublime-project
